BPER/DEVF/force-app/main/default/objects/CH_Memo__c/CH_Memo__c.object-meta.xml
<CustomObject>
    <label>CH - Memo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Memo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Memo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>