BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_Data_di_Creazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_di_Creazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Inserimento</label>
    <type>Date</type>
</CustomField>