BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_DataCH_PDF__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataCH_PDF__c</fullName>
    <formula>IF( CRM_FineValidita__c &lt;&gt; null,  DATEVALUE(CRM_FineValidita__c), CRM_Data_di_Creazione__c)</formula>
    <label>Data CH PDF</label>
    <type>Date</type>
</CustomField>