BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_FineValidita__c.field-meta.xml
<CustomField>
    <fullName>CRM_FineValidita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine validità</label>
    <length>255</length>
    <type>Text</type>
</CustomField>