BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_FineValiditaFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_FineValiditaFormula__c</fullName>
    <formula>DATEVALUE(CRM_FineValidita__c)</formula>
    <label>Fine Validità Formula</label>
    <type>Date</type>
</CustomField>