BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_FineValiditCH_PDF__c.field-meta.xml
<CustomField>
    <fullName>CRM_FineValiditCH_PDF__c</fullName>
    <formula>DATEVALUE(  CRM_FineValidita__c )</formula>
    <label>Fine Validità CH PDF</label>
    <type>Date</type>
</CustomField>