BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_FormulaPopupDiCassa__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaPopupDiCassa__c</fullName>
    <formula>IF( CRM_PopupCassa__c = true, &apos;Si&apos;, &apos;No&apos;)</formula>
    <label>CRM_FormulaPopupDiCassa</label>
    <type>Text</type>
</CustomField>