BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_IDMemo__c.field-meta.xml
<CustomField>
    <fullName>CRM_IDMemo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>