BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_PopupCassa__c.field-meta.xml
<CustomField>
    <fullName>CRM_PopupCassa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag pop up di cassa</label>
    <type>Checkbox</type>
</CustomField>