BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_Referente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Referente__c</fullName>
    <formula>CRM_Account__r.PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.FirstName + &quot; &quot; + CRM_Account__r.PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente</label>
    <type>Text</type>
</CustomField>