BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/CRM_Tipologia_Memo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Tipologia_Memo__c</fullName>
    <label>Tipologia Memo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pubblico</fullName>
                <default>true</default>
                <label>Pubblico</label>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>