BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/Da__c.field-meta.xml
<CustomField>
    <fullName>Da__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inizio Popup di Cassa</label>
    <type>Date</type>
</CustomField>