BPER/DEVF/force-app/main/default/objects/CH_Memo__c/fields/EA_Staus_Data__c.field-meta.xml
<CustomField>
    <fullName>EA_Staus_Data__c</fullName>
    <formula>IF(TODAY() -  DATEVALUE(CRM_FineValidita__c) &gt; 0, &quot;Scadute&quot;,
IF(AND(DATEVALUE(CRM_FineValidita__c) - TODAY() &gt;= 0, DATEVALUE(CRM_FineValidita__c) - TODAY() &lt;= 7), &quot;In scadenza tra 7 Giorni&quot;,
IF(AND(DATEVALUE(CRM_FineValidita__c) - TODAY()&gt;7,DATEVALUE(CRM_FineValidita__c) - TODAY()&lt;=30), &quot;In scadenza tra 30 Giorni&quot;,
IF(AND(DATEVALUE(CRM_FineValidita__c) - TODAY()&gt;7,DATEVALUE(CRM_FineValidita__c) - TODAY()&gt;30), &quot;Oltre i 30 giorni&quot;,&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA_Staus_Data</label>
    <type>Text</type>
</CustomField>